force-app/main/default/objects/Account/fields/NS_PhysicalAddressStreet__c.field-meta.xml
<CustomField>
    <fullName>NS_PhysicalAddressStreet__c</fullName>
    <description>Physical Address Street</description>
    <label>Physical Address Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>