force-app/main/default/objects/Account/fields/NS_PhysicalAddressZip__c.field-meta.xml
<CustomField>
    <fullName>NS_PhysicalAddressZip__c</fullName>
    <description>Physical Address Zip</description>
    <label>Physical Address Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>