force-app/main/default/objects/Account/fields/NS_PrimaryVDN__c.field-meta.xml
<CustomField>
    <fullName>NS_PrimaryVDN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is to Sync ANI with TYES ANI Maintenance</description>
    <label>Primary VDN</label>
    <referenceTo>NS_VDN__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>