force-app/main/default/objects/Account/fields/NS_SCAC__c.field-meta.xml
<CustomField>
    <fullName>NS_SCAC__c</fullName>
    <label>SCAC</label>
    <length>4</length>
    <type>Text</type>
</CustomField>