force-app/main/default/objects/Account/fields/NS_ServiceAccountType__c.field-meta.xml
<CustomField>
    <fullName>NS_ServiceAccountType__c</fullName>
    <description>It indicates what type of Service Account it is.</description>
    <label>Service Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service - Online</fullName>
            </value>
            <value>
                <fullName>Service - Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>