force-app/main/default/objects/Account/fields/NS_ShippingAddressDetails__c.field-meta.xml
<CustomField>
    <fullName>NS_ShippingAddressDetails__c</fullName>
    <description>It is the combination of Shipping Street,City, State and Postal Code.</description>
    <formula>ShippingStreet  &amp;&#39; &#39;&amp;  ShippingCity  &amp;&#39; &#39;&amp;    ShippingState  &amp;&#39; &#39;&amp;   ShippingCountry &amp;&#39; &#39;&amp;  ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address Details</label>
    <type>Text</type>
</CustomField>