force-app/main/default/objects/Account/fields/NS_StatusIndicator__c.field-meta.xml
<CustomField>
    <fullName>NS_StatusIndicator__c</fullName>
    <description>Identifies Account status Active or Inactive</description>
    <label>Status Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <isActive>false</isActive>
                <label>Prospect</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>