force-app/main/default/objects/Account/fields/NS_StatusIndicator_CTMS__c.field-meta.xml
<CustomField>
    <fullName>NS_StatusIndicator_CTMS__c</fullName>
    <description>Account active status in NS Unit Train Service IT system CTMS</description>
    <label>Status Indicator - CTMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>