force-app/main/default/objects/Account/fields/NS_StatusIndicator_Master__c.field-meta.xml
<CustomField>
    <fullName>NS_StatusIndicator_Master__c</fullName>
    <description>Account active status in NS Customer Master system</description>
    <label>Status Indicator - Master</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>