force-app/main/default/objects/Account/fields/NS_StatusIndicator_TEAMS__c.field-meta.xml
<CustomField>
    <fullName>NS_StatusIndicator_TEAMS__c</fullName>
    <description>Account active status in NS Equipment Planning IT system TEAMS</description>
    <label>Status Indicator - TEAMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>