force-app/main/default/objects/Account/fields/NS_X3PL__c.field-meta.xml
<CustomField>
    <fullName>NS_X3PL__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cases for 3PL accounts will automatically route to the CS – Unidentified queue</inlineHelpText>
    <label>3PL</label>
    <type>Checkbox</type>
</CustomField>