force-app/main/default/objects/Account/fields/NSSales_MarketingAccountOwnerSearchable__c.field-meta.xml
<CustomField>
    <fullName>NSSales_MarketingAccountOwnerSearchable__c</fullName>
    <description>This dummy field gets populated with the marketing account owner selected for an account through a workflow rule</description>
    <label>Marketing Account Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>