force-app/main/default/objects/Account/fields/NSSales_No_Action_on_Account_Date__c.field-meta.xml
<CustomField>
    <fullName>NSSales_No_Action_on_Account_Date__c</fullName>
    <formula>Now()-(LastModifiedDate +1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Action on Account Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>