force-app/main/default/objects/Account/fields/NSSales_Slim_Golden__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Slim_Golden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slim Golden</label>
    <type>Checkbox</type>
</CustomField>