force-app/main/default/objects/Account/fields/NSSales_TaskUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>NSSales_TaskUpdateDate__c</fullName>
    <label>TaskUpdateDate</label>
    <type>DateTime</type>
</CustomField>