force-app/main/default/objects/Account/fields/Opportunity_Roll_Up_Report__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Roll_Up_Report__c</fullName>
    <formula>IF( ISBLANK(Parent.Id),HYPERLINK(&quot;/one/one.app#/sObject/00O17000000fxyFEAQ/view?fv0=&quot;&amp;Id&amp;&quot;&amp;fv1=&quot;&amp;Id&amp;&quot;&amp;fv2=&quot;&amp;Id,
&quot;Opportunity Report&quot;),HYPERLINK(&quot;/one/one.app#/sObject/00O17000000fxy0EAA/view?fv0=&quot;&amp;Id&amp;&quot;&amp;fv1=&quot;&amp;Id,
&quot;Opportunity Report&quot;) )</formula>
    <label>Opportunity Roll Up Report</label>
    <type>Text</type>
</CustomField>