force-app/main/default/objects/Account/fields/Representative__c.field-meta.xml
<CustomField>
    <fullName>Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representative</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Representative)</relationshipLabel>
    <relationshipName>NotificationsRep</relationshipName>
    <type>Lookup</type>
</CustomField>