force-app/main/default/objects/Account/fields/tmpTrack_Parent_Change__c.field-meta.xml
<CustomField>
    <fullName>tmpTrack_Parent_Change__c</fullName>
    <description>created 6.27, temp just to track mdm load parentId change</description>
    <label>Track Parent Change</label>
    <length>100</length>
    <type>Text</type>
</CustomField>