force-app/main/default/objects/Account/recordTypes/NS_3PL.recordType-meta.xml
<RecordType>
    <fullName>NS_3PL</fullName>
    <active>true</active>
    <description>A 3PL Account is used for a Third Party Logistics company that contacts Norfolk Southern on behalf of a customer</description>
    <label>3PL</label>
</RecordType>