force-app/main/default/objects/Account/recordTypes/NS_Drayage.recordType-meta.xml
<RecordType>
    <fullName>NS_Drayage</fullName>
    <active>true</active>
    <description>Drayage trucking service who contacts NS regarding a shipment</description>
    <label>Drayage</label>
</RecordType>