force-app/main/default/objects/Account/recordTypes/NS_DrayCarrier.recordType-meta.xml
<RecordType>
    <fullName>NS_DrayCarrier</fullName>
    <active>false</active>
    <description>Dray Carriers trucking service who contacts NS regarding a shipment</description>
    <label>Dray Carrier</label>
</RecordType>