force-app/main/default/objects/Account/recordTypes/NS_FieldLocation.recordType-meta.xml
<RecordType>
    <fullName>NS_FieldLocation</fullName>
    <active>true</active>
    <description>An NS Field Location Account is used for a Norfolk Southern facility</description>
    <label>NS Field Location</label>
</RecordType>