force-app/main/default/objects/Account/recordTypes/NS_Industrial_Development.recordType-meta.xml
<RecordType>
    <fullName>NS_Industrial_Development</fullName>
    <active>true</active>
    <description>Record type layout for ID</description>
    <label>Industrial Development</label>
</RecordType>