force-app/main/default/objects/Account/recordTypes/NS_OfflineCustomer.recordType-meta.xml
<RecordType>
    <fullName>NS_OfflineCustomer</fullName>
    <active>true</active>
    <description>A Manual Customer Account is used for a customer that is not physically serviced by Norfolk Southern</description>
    <label>Manual Customer</label>
</RecordType>