force-app/main/default/objects/Account/recordTypes/NS_OnlineCustomerBusiness.recordType-meta.xml
<RecordType>
    <fullName>NS_OnlineCustomerBusiness</fullName>
    <active>true</active>
    <description>A Business Account is used for a customer entity that Norfolk Southern contacts for billing purposes</description>
    <label>Business</label>
</RecordType>