force-app/main/default/objects/Account/recordTypes/NS_OnlineCustomerCorporate.recordType-meta.xml
<RecordType>
    <fullName>NS_OnlineCustomerCorporate</fullName>
    <active>true</active>
    <description>A Corporate Account is used for a customer’s Corporate headquarters</description>
    <label>Corporate</label>
</RecordType>