force-app/main/default/objects/Account/recordTypes/NS_OnlineCustomerService.recordType-meta.xml
<RecordType>
    <fullName>NS_OnlineCustomerService</fullName>
    <active>true</active>
    <description>A Service Account is used for a customer located on and serviced by Norfolk Southern</description>
    <label>Service</label>
</RecordType>