force-app/main/default/objects/Account/recordTypes/NS_OtherCompany.recordType-meta.xml
<RecordType>
    <fullName>NS_OtherCompany</fullName>
    <active>true</active>
    <description>Other Companies with whom Norfolk Southern does business</description>
    <label>Other Company</label>
</RecordType>