force-app/main/default/objects/Account/recordTypes/NS_OtherRailRoad.recordType-meta.xml
<RecordType>
    <fullName>NS_OtherRailRoad</fullName>
    <active>true</active>
    <description>Other Railroad Companies</description>
    <label>Other Railroad</label>
</RecordType>