force-app/main/default/objects/Account/recordTypes/NS_Port.recordType-meta.xml
<RecordType>
    <fullName>NS_Port</fullName>
    <active>true</active>
    <description>Ports locations that Norfolk Southern services</description>
    <label>Port</label>
</RecordType>