force-app/main/default/objects/Account/recordTypes/Slim_Golden.recordType-meta.xml
<RecordType>
    <fullName>Slim_Golden</fullName>
    <active>true</active>
    <label>Slim Golden</label>
</RecordType>