force-app/main/default/objects/Account/validationRules/NS_AccountPhoneNumberCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>NS_AccountPhoneNumberCheck</fullName>
    <active>true</active>
    <description>It throws error if user enters invalid phone number.</description>
    <errorConditionFormula>IF( 
AND(NOT(ISBLANK(Phone)),!Lead_Created__c)
,
NOT(REGEX(Phone,&quot;(\\d){7}|(\\d){10}&quot;)), 
FALSE 
)</errorConditionFormula>
    <errorMessage>Please ensure that Company Phone is 7 digits or 10 digits with no dashes - or parenthesis ()</errorMessage>
</ValidationRule>