force-app/main/default/objects/Account/validationRules/NS_AccountRecordTypeCannotBeEdited.validationRule-meta.xml
<ValidationRule>
    <fullName>NS_AccountRecordTypeCannotBeEdited</fullName>
    <active>true</active>
    <description>No OSS User should be able to change record type for any Account.</description>
    <errorConditionFormula>AND(
     OR(
         $Profile.Name =&#39;OSS Manager&#39;,
         $Profile.Name =&#39;OSS Manager Sales and Service&#39;,
         $Profile.Name =&#39;OSS Support&#39;,
         $Profile.Name =&#39;OSS Rep&#39;,
         $Profile.Name =&#39;Automotive Manager&#39;, 
         $Profile.Name =&#39;Automotive Leadership&#39;, 
         $Profile.Name =&#39;EP Manager&#39;, 
         $Profile.Name =&#39;EP Leadership&#39;, 
         $Profile.Name =&#39;UTS Manager&#39;, 
         $Profile.Name =&#39;UTS Leadership&#39; 

       ),
      ISCHANGED(RecordTypeId)
   )</errorConditionFormula>
    <errorMessage>Account record type cannot be changed</errorMessage>
</ValidationRule>