force-app/main/default/objects/Account/validationRules/NS_DeactivationReason.validationRule-meta.xml
<ValidationRule>
    <fullName>NS_DeactivationReason</fullName>
    <active>true</active>
    <description>It checks if user has provided a reason upon deactivation of an account</description>
    <errorConditionFormula>OR(NS_Deactivate__c   = true  &amp;&amp;  ISBLANK( NS_DeactivationReason__c ),NS_Deactivate__c   = false &amp;&amp;  NOT( ISBLANK( NS_DeactivationReason__c )))</errorConditionFormula>
    <errorDisplayField>NS_DeactivationReason__c</errorDisplayField>
    <errorMessage>Please enter the Deactivation Reason AND check the Deactivate checkbox to request that this Account be deactivated.</errorMessage>
</ValidationRule>