force-app/main/default/objects/Account/validationRules/NS_OperatingStMandatoryForOnlineAccounts.validationRule-meta.xml
<ValidationRule>
    <fullName>NS_OperatingStMandatoryForOnlineAccounts</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(NS_ServiceAccountType__c , &#39;Service - Online&#39;),
    OR(
       ISNULL(NS_OperatingStation__c),
       ISBLANK(NS_OperatingStation__c) 
    )
)</errorConditionFormula>
    <errorDisplayField>NS_OperatingStation__c</errorDisplayField>
    <errorMessage>Please select the Operating Station.</errorMessage>
</ValidationRule>