force-app/main/default/objects/Account/validationRules/NS_RestrictInactiveAccountEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>NS_RestrictInactiveAccountEdit</fullName>
    <active>true</active>
    <description>Restrict Inactive Account Edit</description>
    <errorConditionFormula>AND(
NOT(ISNEW()) ,
ISPICKVAL(NS_StatusIndicator__c , &#39;Inactive&#39;),
NOT(OR($Profile.Name = &#39;System Administrator&#39;, $Profile.Name = &#39;OSS Support&#39;, $Profile.Name = &#39;NS Integration User&#39;))
)</errorConditionFormula>
    <errorMessage>Inactive Account cannot be Edited. Please contact &quot;OSS Support&quot; or &quot;System Admin&quot;</errorMessage>
</ValidationRule>