force-app/main/default/objects/Account/validationRules/NS_ServiceAccountTypeRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>NS_ServiceAccountTypeRequired</fullName>
    <active>false</active>
    <description>This ensures &#39;Service Account Type&#39; field has some value whenever a new service account is created.</description>
    <errorConditionFormula>IF(RecordType.DeveloperName = &#39;NS_OnlineCustomerService&#39;, ISBLANK(TEXT( NS_ServiceAccountType__c )), FALSE)</errorConditionFormula>
    <errorMessage>Please ensure &#39;Service Account Type&#39; has a value</errorMessage>
</ValidationRule>