force-app/main/default/objects/Account/listViews/All_Business_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Business_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>NS_Address__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>NS_Function_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.NS_OnlineCustomerBusiness</value>
    </filters>
    <label>All Business Accounts</label>
</ListView>