force-app/main/default/objects/Account/listViews/All_Corporate_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Corporate_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>NS_Address__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.NS_OnlineCustomerCorporate</value>
    </filters>
    <label>All Corporate Accounts</label>
</ListView>