force-app/main/default/objects/Account/listViews/All_Offline_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Offline_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.NS_OfflineCustomer</value>
    </filters>
    <label>All Manual Customers</label>
</ListView>