force-app/main/default/objects/Account/listViews/All_Service_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Service_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>NS_Address__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.NS_OnlineCustomerService</value>
    </filters>
    <label>All Service Accounts</label>
    <sharedTo>
        <role>Automotive_Leadership</role>
        <role>Automotive_Manager</role>
        <role>EP_Leadership</role>
        <role>EP_Manager</role>
        <role>Integration_User</role>
        <role>Intermodal_Manager</role>
        <role>Intermodal_User</role>
        <role>Marketing_Leadership</role>
        <role>Marketing_Manager</role>
        <role>NS_Automotive</role>
        <role>NS_Executive</role>
        <role>NS_Marketing</role>
        <role>NS_Marketing_Leadership</role>
        <role>NS_Read_Only</role>
        <role>NS_RevenueAccountingDemurrage</role>
        <role>NS_RevenueAccountingTraffic</role>
        <role>NS_UnitTrain</role>
        <role>OSS_Administrative_Manager</role>
        <role>OSS_Administrative_Rep</role>
        <role>OSS_Clearances_Manager</role>
        <role>OSS_Clearances_Rep</role>
        <role>OSS_Data_Quality_Manager</role>
        <role>OSS_Data_Quality_Rep</role>
        <role>OSS_Freight_Claims_Manager</role>
        <role>OSS_Freight_Claims_Rep</role>
        <role>OSS_LSS_Manager</role>
        <role>OSS_LSS_Rep</role>
        <role>OSS_Leadership</role>
        <role>OSS_Northern_Region_East_Manager</role>
        <role>OSS_Northern_Region_East_Rep</role>
        <role>OSS_Northern_Region_West_Manager</role>
        <role>OSS_Northern_Region_West_Rep</role>
        <role>OSS_Northern_Regional_Manager</role>
        <role>OSS_Revenue_Protection_Manager</role>
        <role>OSS_Revenue_Protection_Rep</role>
        <role>OSS_Southern_Region_East_Manager</role>
        <role>OSS_Southern_Region_East_Rep</role>
        <role>OSS_Southern_Region_West_Manager</role>
        <role>OSS_Southern_Region_West_Rep</role>
        <role>OSS_Southern_Regional_Manager</role>
        <role>OSS_Special_Service_Rep</role>
        <role>OSS_Special_Services_Manager</role>
        <role>OSS_Support</role>
        <role>OSS_eCommerce_Manager</role>
        <role>OSS_eCommerce_Rep</role>
        <role>Revenue_Claims</role>
        <role>UT_Leadership</role>
        <role>UT_Manager</role>
    </sharedTo>
</ListView>