force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>PARENT_NAME</columns>
    <columns>NS_StatusIndicator__c</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>NS_ClassCode__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NS_StatusIndicator__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Accounts</label>
</ListView>